--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,11 +66,15 @@
             <div class="col-md-6 p-3">
                 <h1>Spring Web MVC</h1>
             </div>
-            <div class="wrapper-input col-md-4 p-4 d-flex">
-                <input type="text" placeholder="Search book" />
-                <div class="btn btn-primary">
-                    <a>Search</a>
-                </div>
+            <div class="wrapper-input col-md-4 p-4 d-flex" style="gap: 10px;">
+                <form method="get" th:action="@{/books/search}">
+                    <input type="text" name="keyWords" placeholder="Search by name, author, category"
+                        style="padding: 10px" />
+                    <div class="btn btn-primary">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </div>
+                </form>
+
             </div>
             <div class="col-md-2 p-4">
                 <div class="btn btn-primary">
@@ -119,6 +123,7 @@
                 </tbody>
             </table>
         </div>
+        
     </div>
 
 
