--- a/src/main/resources/templates/components/addBook.html
+++ b/src/main/resources/templates/components/addBook.html
@@ -22,6 +22,7 @@
                 <div class="mb-3">
                     <label class="form-label">Author</label>
                     <input class="form-control" type="text" th:field="*{author}" />
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">ISBN</label>
